fixing card size on mobile view

--- a/assets/style.css
+++ b/assets/style.css
@@ -252,29 +252,28 @@ button {
   }
 }
 /* CAROUSEL CONTENT */
-.carousel .carousel-item{
+.carousel .carousel-item {
   /* display: flex; */
   height: 100vh;
   background-image: linear-gradient(180deg, #00000069, #000000c5);
 }
-.carousel-indicatorss li{
-  background-image:  linear-gradient(180deg, #8ea170, #000000c5),url('img/ellpise.svg');
+.carousel-indicatorss li {
+  background-image: linear-gradient(180deg, #8ea170, #000000c5),
+    url("img/ellpise.svg");
   background-size: cover;
   /* width: 20rem!important; */
-  height: 10px!important;
+  height: 10px !important;
   /* border-radius: 1rem!important; */
 }
-.carousel img{
+.carousel img {
   width: 100%;
 }
-.carousel-item{
+.carousel-item {
   background-color: linear-gradient(#00000065, #00000000);
-  background-size: cover ;
+  background-size: cover;
   background-position: center center;
-
 }
-.carousel-control-prev-icon{
-  
+.carousel-control-prev-icon {
 }
 /* .carousel {
   display: flex;
@@ -321,7 +320,8 @@ button {
   display: none;
 }
 
-.carousel h1, .header-carousel h1 {
+.carousel h1,
+.header-carousel h1 {
   color: var(--white);
   font-family: "Bell MT", serif;
   font-weight: bold; /* Mengatur ketebalan font menjadi bold */
@@ -457,13 +457,18 @@ button {
 @media screen and (max-width: 1200px) {
   .aboutus .swiper {
     width: 360px;
-    height: 480px;
+    height: 540px;
+  }
+  .aboutus .row {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 5rem;
   }
 }
 
 @media screen and (max-width: 900px) {
   .aboutus .row h2 {
-    font-size: 4rem;
+    font-size: 4rem !important;
   }
 
   .aboutus .row p {
@@ -472,23 +477,15 @@ button {
 }
 
 @media screen and (max-width: 768px) {
-  .aboutus .swiper {
-    width: 480px;
-    height: 640px;
-  }
-
-  .aboutus .row {
-    display: flex;
-    gap: 3rem;
-    flex-direction: column-reverse;
-  }
-
-  .aboutus .row .col:first-child() {
-    margin-top: 3rem;
-  }
-
   .aboutus .row p {
     margin-bottom: 2rem;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .aboutus .swiper {
+    width: 280px;
+    height: 420px;
   }
 }
 /* CSS untuk membuat teks disembunyikan */
@@ -766,8 +763,9 @@ blockquote h3:before {
 }
 
 @media screen and (max-width: 768px) {
-  .testimoni h3 {
-    font-size: 2rem;
+  .testimoni h3,
+  .testimoni h2 {
+    font-size: 1.5rem !important;
   }
 }
 
